[gd_scene load_steps=5 format=3 uid="uid://byryatimrsrhf"]

[ext_resource type="PackedScene" uid="uid://dsbenaf2j7t8t" path="res://scenes/game_objects/weapons/weapon/weapon.tscn" id="1_8s7uc"]
[ext_resource type="Script" path="res://scenes/game_objects/weapons/range_weapons/range_weapon/range_weapon.gd" id="2_lif4x"]
[ext_resource type="PackedScene" uid="uid://dur6wblr8mkxs" path="res://scenes/components/audio_3d/audio_3D.tscn" id="3_abduc"]
[ext_resource type="AudioStream" uid="uid://dpkmn62m0aai2" path="res://scenes/game_objects/weapons/range_weapons/range_weapon/reload.wav" id="4_8a8n1"]

[node name="RangeWeapon" instance=ExtResource("1_8s7uc")]
script = ExtResource("2_lif4x")
projectiles_per_shoot = 0
spread = 0.01
max_ammo = 0
max_chamber = 0
reload_time = 0.0
projectile = null
hit_marker_size = 0

[node name="ReloadAudio" parent="Audio" index="2" instance=ExtResource("3_abduc")]
stream = ExtResource("4_8a8n1")

[node name="EmptyAudio" parent="Audio" index="3" instance=ExtResource("3_abduc")]

[node name="ProjectileSpawner" type="Node3D" parent="." index="5"]

[node name="ShellSpawner" type="Node3D" parent="." index="6"]

[node name="ReloadTimer" type="Timer" parent="." index="7"]
one_shot = true
